--- a/style.css
+++ b/style.css
@@ -89,8 +89,8 @@ button:active{
     margin-bottom: 15px;
 }
 
-.converted-real, .converted-dolar{
-    font-weight: 500;
+.converted-real, .converted-currency{
+    font-weight: 550;
     font-size: 14px;
     line-height: 18px;
     color: #777777;
@@ -113,4 +113,9 @@ button:active{
     font-size: 20px;
     line-height: 18px;
     color: #555555;
+}
+
+.currency-img{
+    width: 44px;
+    height: 44px;
 }
